Fix overflow on code blocks
overflow-inline isn't supported everywhere yet. Oops.

--- a/public/style.css
+++ b/public/style.css
@@ -238,7 +238,7 @@
 	}
 
 	pre {
-		overflow-inline: auto;
+		overflow-x: auto;
 	}
 
 	:not(pre) > code {
